AWS SQS Module Initial checkin